Compilation fixes